--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <body>
 
     <div class="image-container">
-        <img src="C:/Users/idans/OneDrive/תמונות/סרט צילום/2025/02/20250228_181444105_iOS.jpg" alt="תמונה של עידן" />
+        <img src="run.jpg" alt="תמונה של עידן" />
         <img src="C:/Users/idans/iCloudPhotos/Photos/IMG_3241.JPG" alt="עוד תמונה מריצה" />
     </div>
 
