--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 <body>
 
     <div class="image-container">
-        <img src="run.jpg" alt="תמונה של עידן" />
-        <img src="C:/Users/idans/iCloudPhotos/Photos/IMG_3241.JPG" alt="עוד תמונה מריצה" />
+        <img src="run1.jpg" alt="תמונה של עידן" />
+        <img src="run.jpg" alt="עוד תמונה מריצה" />
     </div>
 
     <div class="content">
