--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <ul class="upcoming">
             <li>מירוץ עמק המעיינות ב-5.12.25 - 10 ק"מ</li>
             <li>  מירוץ בשביל המחר מועצה אזורית אשכול ב-19.12.25 - 10 ק"מ</li>
-            <li>מרתון טבריה ב-9.1.26 - 21.1 ק"מ</li>
+            <li>מרתון טבריה ב-9.1.26 -10 ק"מ \ 21.1 ק"מ</li>
             <li>מרתון תל אביב ב-27.2.26 - 21.1 ק"מ</li>
         </ul>
 
