--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             ברוכים הבאים לעמוד הריצה שלי! כאן אני משתף את החוויות, הסיפורים והרגעים המרגשים מהריצות שלי.
             זה המקום שבו אוכל לעדכן על התקדמות, מטרות, מסלולים חדשים וכל מה שקשור לעולם הריצה שמהווה חלק חשוב מהיומיום שלי.
         </p>
-
+          <h2 style="margin-top:40px;">תוצאות: </h2>
         <ul class="results">
             <li> מרתון 2025 תל אביב 21.1 ק"מ- 01:45:06</li>
             <li> מירוץ 2025 רחובות 5 ק"מ- 00:23:50</li>
