--- a/index.html
+++ b/index.html
@@ -119,6 +119,31 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.2);
             margin-bottom: 20px;
         }
+         .blog-entry {
+margin-top: 40px;
+max-width: 700px;
+margin-left: auto;
+margin-right: auto;
+text-align: right;
+background: linear-gradient(135deg, #ffe6f2, #fff0e6);
+color: #4b2e83;
+padding: 25px;
+border-radius: 15px;
+box-shadow: 3px 3px 15px rgba(0,0,0,0.2);
+font-family: 'Georgia', serif;
+}
+
+
+.blog-entry h2 {
+margin-top: 0;
+color: #6a1b9a;
+}
+
+
+.blog-entry p {
+font-size: 18px;
+line-height: 1.6;
+}
     </style>
 </head>
 <body>
@@ -154,7 +179,15 @@
                 עקבו אחרי באפליקציית Strava
             </a>
         </div>
-
+<div class="blog-entry">
+<h2>בלוג אישי</h2>
+<p>
+אני אוהב פשוט לצאת לרוץ בלי לתכנן מראש, בלי להציב יעד.
+לשים אוזניות, להתלבש ספורטיבי, ולצאת לריצה.
+כל ריצה היא חוויה בפני עצמה, והעיקר בשבילי הוא ההנאה מהדרך.
+מה שיוצא – אני מרוצה.
+</p>
+</div>
     </div>
 
 </body>
