--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ line-height: 1.6;
 אני אוהב פשוט לצאת לרוץ בלי לתכנן מראש, בלי להציב יעד.
 לשים אוזניות, להתלבש ספורטיבי, ולצאת לריצה.
 כל ריצה היא חוויה בפני עצמה, והעיקר בשבילי הוא ההנאה מהדרך.
-מה שיוצא – אני מרוצה.
+מה שיוצא – אני מרוצה
 </p>
 </div>
     </div>
