--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@ line-height: 1.6;
 
         <h2 style="margin-top:40px;">מירוצים קרובים</h2>
         <ul class="upcoming">
-            <li>מירוץ עמק המעיינות ב-5.12.25 - 10 ק"מ</li>
-            <li>  מירוץ בשביל המחר מועצה אזורית אשכול ב-19.12.25 - 10 ק"מ</li>
-            <li>מרתון טבריה ב-9.1.26 -10 ק"מ \ 21.1 ק"מ</li>
-            <li>מרתון תל אביב ב-27.2.26 - 21.1 ק"מ</li>
+            <li>מירוץ עמק המעיינות ב- 5.12.25 - 10 ק"מ</li>
+            <li>  מירוץ בשביל המחר מועצה אזורית אשכול ב- 19.12.25 - 10 ק"מ</li>
+            <li>מרתון טבריה ב- 9.1.26 - 10 ק"מ \ 21.1 ק"מ</li>
+            <li>מרתון תל אביב ב- 27.2.26 - 21.1 ק"מ</li>
         </ul>
 
         <div class="strava-link">
