Fix wording in personal blog section

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ line-height: 1.6;
 <p>
 אני אוהב פשוט לצאת לרוץ בלי לתכנן מראש, בלי להציב יעד.
 לשים אוזניות, להתלבש ספורטיבי, ולצאת לריצה.
-כל ריצה היא חוויה בפני עצמה, והעיקר בשבילי הוא ההנאה מהדרך.
+כל ריצה היא חוויה בפני עצמה, והעיקר בשבילי זה ההנאה מהדרך.
 מה שיוצא – אני מרוצה
 </p>
 </div>
