--- a/index.html
+++ b/index.html
@@ -163,11 +163,12 @@ line-height: 1.6;
         <ul class="results">
             <li> מרתון 2025 תל אביב 21.1 ק"מ- 01:45:06</li>
             <li> מירוץ 2025 רחובות 5 ק"מ- 00:23:50</li>
+             <li> מירוץ 2025 עמק המעיינות 10 ק"מ- 00:48:32</li>
+
         </ul>
 
         <h2 style="margin-top:40px;">מירוצים קרובים</h2>
         <ul class="upcoming">
-            <li>מירוץ עמק המעיינות ב- 5.12.25 - 10 ק"מ</li>
             <li>  מירוץ בשביל המחר מועצה אזורית אשכול ב- 19.12.25 - 10 ק"מ</li>
             <li>מרתון טבריה ב- 9.1.26 - 10 ק"מ \ 21.1 ק"מ</li>
             <li>מרתון תל אביב ב- 27.2.26 - 21.1 ק"מ</li>
@@ -182,10 +183,7 @@ line-height: 1.6;
 <div class="blog-entry">
 <h2>בלוג אישי</h2>
 <p>
-אני אוהב פשוט לצאת לרוץ בלי לתכנן מראש, בלי להציב יעד.
-לשים אוזניות, להתלבש ספורטיבי, ולצאת לריצה.
-כל ריצה היא חוויה בפני עצמה, והעיקר בשבילי זה ההנאה מהדרך.
-מה שיוצא – אני מרוצה
+    במירוץ האחרון בעמק המעיינות הרגשתי טוב, שברתי שיא את השיא האישי לריצת 10 ק"מ, היה לי כיף, שמתי אוזניות נהניתי ממזג האוויר הנפלא, ורצתי בקצ שלי, שהרגיש לי טוב ונוח עם הגוף, עכשיו תורכם לצאת לרוץ וליהנות.
 </p>
 </div>
     </div>
