--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ line-height: 1.6;
 <div class="blog-entry">
 <h2>בלוג אישי</h2>
 <p>
-    במירוץ האחרון בעמק המעיינות הרגשתי טוב, שברתי שיא את השיא האישי לריצת 10 ק"מ, היה לי כיף, שמתי אוזניות נהניתי ממזג האוויר הנפלא, ורצתי בקצ שלי, שהרגיש לי טוב ונוח עם הגוף, עכשיו תורכם לצאת לרוץ וליהנות.
+    במירוץ האחרון בעמק המעיינות הרגשתי טוב, שברתי את השיא האישי שלי לריצת 10 ק"מ, היה לי כיף, שמתי אוזניות נהניתי ממזג האוויר הנפלא, ורצתי בקצ שלי, שהרגיש לי טוב ונוח עם הגוף, עכשיו תורכם לצאת לרוץ וליהנות.
 </p>
 </div>
     </div>
