Replace local image path with run2.jpg

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ line-height: 1.6;
     <div class="image-container">
         <img src="run1.jpg" alt="תמונה של עידן" />
         <img src="run.jpg" alt="עוד תמונה מריצה" />
-          <img src=""C:\Users\idans\iCloudPhotos\Photos\2B6132A3-4BA8-458C-9D80-04784C86775E.jpg"" alt="עוד תמונה מריצה" />
+          <img src=""run2.jpg"" alt="עוד תמונה מריצה" />
     </div>
 
     <div class="content">
