--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.2);
             margin-bottom: 20px;
         }
+         .image-container {
+            width: 35%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
          .blog-entry {
 margin-top: 40px;
 max-width: 700px;
